Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1974

Libraries are not being correctly detected in CMake build scripts when old CMake is used

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.25.0, proton-c-0.26.0
    • proton-c-0.27.0
    • build, proton-c
    • None
    • RHEL 7, CMake 2.8.12.2
    • Patch

    Description

      On CMake 2.8.12.2, function find_package_handle_standard_args sets (by default) only the <PACKAGENAME>_FOUND variable. With newer versions, such as 3.12.1, both the uppercased, as well as the unmodified <PackageName>_FOUND are set. Proton examines the unmodified variable.

      As a result, with older CMake, optional libraries such as Cyrus SASL are detected by CMake, but then are not used by proton-c, as if they were not present on the system.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            jdanek Jiri Daněk
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: